Aug 07, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.5

Aug 03, 2008 - chris
o On Linux for ARM: disable pread/pwrite; pwrite seems to be buggy, 
    at least in the maemo.org 4.1 Environment for ATMEL CPU's.

Aug 02, 2008 - chris
o If available, the flag O_NOATIME is now specified when opening or creating 
    files

Jul 23, 2008 - chris
o Fixed potential NULL pointer access and a bug in ham_dump.c 
    (thanks, Zhao Xinjian)

Jul 21, 2008 - chris
o Fixed potential buffer overflow (thanks, Tielei Wang)

Jul 19, 2008 - chris
o The C++ wrapper now supports Transactions (see ham::db::begin(),
    ham::txn::abort(), ham::txn:commit())

Jul 18, 2008 - chris
o ham_close now supports the flag HAM_TXN_AUTO_COMMIT
o ham_env_close now supports the flag HAM_TXN_AUTO_COMMIT

Jun 28, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.4

Jun 27, 2008 - chris
o Implemented the first of several milestones with Transaction support;
    please see the README for details about the limitations, some of them
    are quite severe
    
Jun 16, 2008 - chris
o Bugfix: when creating several Databases in an Environment, and recovery
    was enabled, each Database created its own log object and the log
    was corrupted

Jun 03, 2008 - chris
o Fixed typo in hamsterdb.h documentation - HAM_INV_LOG_FILE_HEADER is
    actually called HAM_LOG_INV_FILE_HEADER

May 25, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.3

May 24, 2008 - chris
o Unittests no longer fail when compiled without encryption, compression
	or internal functions
o Moved ham_get_flags from ham/hamsterdb_int.h to ham/hamsterdb.h

May 22, 2008 - chris
o Log files now respect the file filters - i.e. if aes encryption is enabled,
	the log file is also encrypted

May 21, 2008 - chris