@@ -6,6 +6,10 @@ SUBDIRS =
 endif
 
 if ENABLE_COMPRESSION
+if SYSTEM_ZLIB
+# nop
+else
 SUBDIRS += zlib
+endif
 endif
 
